<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_transparent"
    tools:context=".presentation.dialog.PermissionDialogFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@color/color_white"
        app:cardCornerRadius="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp">

            <ImageView
                android:id="@+id/ic_bell"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_bell"
                app:layout_constraintBottom_toTopOf="@id/tv_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/permission_main"
                android:textColor="@color/text_black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/tv_notification_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ic_bell" />

            <ImageView
                android:id="@+id/iv_bell_mini"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_bell_mini"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_notification_title" />

            <TextView
                android:id="@+id/tv_notification_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/permission_title_notification"
                android:textColor="@color/text_black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/tv_notification_description"
                app:layout_constraintStart_toEndOf="@id/iv_bell_mini"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_notification_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/permission_description_notification"
                android:textColor="@color/stroke_dark"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/tv_info_title"
                app:layout_constraintStart_toStartOf="@id/tv_notification_title"
                app:layout_constraintTop_toBottomOf="@id/tv_notification_title" />

            <ImageView
                android:id="@+id/iv_lock_mini"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_lock_mini"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_info_title" />

            <TextView
                android:id="@+id/tv_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/permission_title_info"
                android:textColor="@color/text_black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/tv_info_title_description"
                app:layout_constraintStart_toEndOf="@id/iv_lock_mini"
                app:layout_constraintTop_toBottomOf="@id/tv_notification_description" />

            <TextView
                android:id="@+id/tv_info_title_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_description_info"
                android:textColor="@color/stroke_dark"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/tv_info_title"
                app:layout_constraintBottom_toTopOf="@id/btn_start"
                app:layout_constraintTop_toBottomOf="@id/tv_info_title" />

            <com.coffeeinjection.message.util.GradientTextButton
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_info_title_description"
                android:text="@string/permission_agree_start"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_start"
                android:text="@string/permission_description"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginVertical="20dp"
                android:gravity="center"
                android:textColor="@color/text_quaternary"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>