<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <!-- 카드(편지) 쓰기모드 영역 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_container"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_neutral"
            android:paddingStart="22dp"
            android:paddingTop="18dp"
            android:paddingEnd="22dp"
            android:paddingBottom="18dp">

            <!-- 닫기(X) -->

            <!-- 상단 아이콘 -->
            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_warning"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- 타이틀 -->
            <TextView
                android:id="@+id/tv_title"
                style="@style/primary_body_normal16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/dialog_fragment_warning_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_icon" />

            <!-- 서브 -->
            <TextView
                android:id="@+id/tv_sub_title"
                style="@style/grey_second_title_normal14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/dialog_fragment_warning_sub_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <com.coffeeinjection.message.util.GradientTextButton
        android:id="@+id/btn_cancel"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0.5"
        android:background="@drawable/bg_white_round12"
        android:text="@string/dialog_fragment_warning_cancel"
        android:textColor="@color/text_secondary"
        app:layout_constraintStart_toStartOf="@+id/card_container"
        app:layout_constraintTop_toBottomOf="@+id/card_container" />

    <com.coffeeinjection.message.util.GradientTextButton
        android:id="@+id/btn_close"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="0.5"
        android:background="@drawable/bg_red_gradient"
        android:text="@string/dialog_fragment_warning_close"
        android:textColor="@color/color_white"
        app:layout_constraintEnd_toEndOf="@+id/card_container"
        app:layout_constraintTop_toBottomOf="@+id/card_container" />

</androidx.constraintlayout.widget.ConstraintLayout>