<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <!-- 카드(편지) 쓰기모드 영역 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_container"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="48dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_neutral"
            android:paddingStart="22dp"
            android:paddingTop="18dp"
            android:paddingEnd="22dp"
            android:paddingBottom="18dp">

            <!-- 닫기(X) -->
            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- 상단 아이콘(봉투) -->
            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_bottle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- 타이틀 -->
            <TextView
                android:id="@+id/tv_title"
                style="@style/grey_second_title_normal12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/dialog_fragment_message_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_icon" />

            <!-- 입력 -->
            <EditText
                android:id="@+id/et_message"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/transparent"
                android:gravity="top|start"
                android:hint="@string/dialog_fragment_message_hint"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLength="500"
                android:overScrollMode="ifContentScrolls"
                android:padding="14dp"
                android:textColor="@color/text_context"
                android:textColorHint="@color/divider_grey600"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/layout_bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <View
                android:id="@+id/view_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_grey400"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_message" />

            <!-- 하단(카운트 / 안내문구) -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_bottom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_message">

                <TextView
                    android:id="@+id/tv_char_count"
                    style="@style/quaternary_body_normal10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0/500"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_hint"
                    style="@style/quaternary_body_normal10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_fragment_hint"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- 보내기 버튼 -->
    <com.coffeeinjection.message.util.GradientTextButton
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_fragment_message_send"
        android:drawableStart="@drawable/ic_send"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/card_container"
        app:layout_constraintTop_toBottomOf="@+id/card_container" />

</androidx.constraintlayout.widget.ConstraintLayout>